# testTask

./: .gitignore  CMakeLists.txt  config.json
client/: CMakeLists.txt  config.json  main.cpp
client/hFiles/: client.h
client/sFiles/: client.cpp  client.ui
protoDir/: transMessg.pb.cc  transMessg.pb.h  transMessg.proto
server/: CMakeLists.txt  config.json  main.cpp
server/hFiles/: server.h
server/protoDir/: CMakeLists.txt  transMessg.pb.cc  transMessg.pb.h  transMessg.proto
server/sFiles/: server.cpp
